# tixel-scraper

./: .gitignore  LICENSE  README.md  docker-compose.yml  main.py  personal_notes.md  pyproject.toml  s3.py  tixel_api.py
analysis/: Dockerfile  README.md  analyze.py  database.py  init_db.py  pyproject.toml  test_connection.ipynb
analysis/notebooks/: data_analysis.ipynb
lambda/: .terraform.lock.hcl  README.md  build.sh  logger_config.py  main.py  main.tf  pyproject.toml  requirements.txt
resources/: example.json
